[gd_scene load_steps=6 format=3 uid="uid://dpvi60lhihsw6"]

[ext_resource type="Script" uid="uid://cud68qanns3gq" path="res://scenes/GUI/bingo_main/bingo_board/gui_bingo_board.gd" id="1_6hg7x"]
[ext_resource type="PackedScene" uid="uid://c7umx5sj4nyhs" path="res://scenes/GUI/bingo_main/bingo_board/gui_bingo_header_label_col.tscn" id="2_g0j35"]
[ext_resource type="Texture2D" uid="uid://b0nsc2v1cdqqd" path="res://resources/sprites/GUI/shared/panel_background_simple.png" id="3_fu6ua"]
[ext_resource type="PackedScene" uid="uid://cnbj1jvvx1mg1" path="res://scenes/GUI/bingo_main/bingo_board/gui_bingo_header_label_row.tscn" id="3_j5lft"]
[ext_resource type="AudioStream" uid="uid://cdk0ovqx36gi8" path="res://resources/sounds/SFX/bingo/bingo_space_removal.wav" id="4_1k2l1"]

[node name="GUIBingoBoard" type="PanelContainer"]
custom_minimum_size = Vector2(116, 116)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6hg7x")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="RowLabels" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 1

[node name="Spacer" type="Control" parent="VBoxContainer/HBoxContainer/RowLabels"]
custom_minimum_size = Vector2(0, 1)
layout_mode = 2

[node name="GUIBingoHeaderLabelRow1" parent="VBoxContainer/HBoxContainer/RowLabels" instance=ExtResource("3_j5lft")]
layout_mode = 2
text = "1"

[node name="GUIBingoHeaderLabelRow2" parent="VBoxContainer/HBoxContainer/RowLabels" instance=ExtResource("3_j5lft")]
layout_mode = 2
text = "2"

[node name="GUIBingoHeaderLabelRow3" parent="VBoxContainer/HBoxContainer/RowLabels" instance=ExtResource("3_j5lft")]
layout_mode = 2
text = "3"

[node name="GUIBingoHeaderLabelRow4" parent="VBoxContainer/HBoxContainer/RowLabels" instance=ExtResource("3_j5lft")]
layout_mode = 2
text = "4"

[node name="GUIBingoHeaderLabelRow5" parent="VBoxContainer/HBoxContainer/RowLabels" instance=ExtResource("3_j5lft")]
layout_mode = 2
text = "5"

[node name="Background" type="NinePatchRect" parent="VBoxContainer/HBoxContainer"]
self_modulate = Color(0.101961, 0.0980392, 0.196078, 1)
custom_minimum_size = Vector2(106, 106)
layout_mode = 2
texture = ExtResource("3_fu6ua")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3

[node name="SpaceContainer" type="GridContainer" parent="VBoxContainer/HBoxContainer/Background"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 1
theme_override_constants/v_separation = 1
columns = 5

[node name="Spacer" type="Control" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="ColLabels" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 1

[node name="Spacer" type="Control" parent="VBoxContainer/ColLabels"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="GUIBingoHeaderLabelCol1" parent="VBoxContainer/ColLabels" instance=ExtResource("2_g0j35")]
layout_mode = 2
text = "1"

[node name="GUIBingoHeaderLabelCol2" parent="VBoxContainer/ColLabels" instance=ExtResource("2_g0j35")]
layout_mode = 2
text = "2"

[node name="GUIBingoHeaderLabelCol3" parent="VBoxContainer/ColLabels" instance=ExtResource("2_g0j35")]
layout_mode = 2
text = "3"

[node name="GUIBingoHeaderLabelCol4" parent="VBoxContainer/ColLabels" instance=ExtResource("2_g0j35")]
layout_mode = 2
text = "4"

[node name="GUIBingoHeaderLabelCol5" parent="VBoxContainer/ColLabels" instance=ExtResource("2_g0j35")]
layout_mode = 2
text = "5"

[node name="RefreshAudio" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_1k2l1")
bus = &"SFX"
